@@ -1,3 +1,10 @@
+2012-05-23 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-05-10
+	* revert latest changes to lumi handling, current is also safe
+	* pid for currently used raw cell written into shared memory
+	  (currently unused on the RB side)
+
 2012-05-22 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-05-09
